<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<resources>
    <string name="app_name">Mini Game Collection</string>
    <string name="title_activity_main">Mini Game Collection</string>
    <string name="signed_out_greeting">Hello, anonymous user (not signed in)!</string>
    <string name="achievements_exception">There was an issue communicating with achievements.</string>
    <string name="leaderboards_exception">There was an issue communicating with leaderboards.</string>
    <string name="players_exception">There was an issue communicating with players.</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>
    <string name="achievement_prime_toast_text">Prime score!</string>
    <string name="achievement_arrogant_toast_text">Arrogant (requested maximum score)!</string>
    <string name="achievement_humble_toast_text">Humble! (requested 0 score)</string>
    <string name="achievement_leet_toast_text">L33t! (got 1337 score)</string>
    <string name="achievement">Achievement</string>
    <string name="your_progress_will_be_uploaded">Your existing achievements and score will be uploaded shortly.</string>
    <string name="see_your_progress">See your progress:</string>
    <string name="show_achievements">Show Achievements</string>
    <string name="show_leaderboards">Show Leaderboards</string>
    <string name="sign_in_why">Sign in with Google to share your scores and achievements with your friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_to_upload_this_score">Sign in now to upload this score, save your achievements and share your progress with friends.</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_our_skeleton_app_">Welcome to our skeleton app!</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>
    <string name="error_get_inbox_intent">There was a problem getting the inbox intent!</string>
    <string name="error_get_select_opponents">There was a problem getting the select opponents intent!</string>
    <string name="turn_label">Turn %1$d</string>
</resources>
